# Build-System

./: CMakeLists.txt  Makefile  README.md
Clean_Scripts/: clean.bat  clean.sh
__cmake_systeminformation/: CMakeCache.txt
